  - Implemented FCS/FDS Deprecation CPU feature
  - Implemented SHA instructions emulation
  - Implemented XSAVEC instruction emulation and XINUSE optimization in the XSAVEOPT instruction
  - Implemented AVX-512 instructions emulation (experimental)
  ! CPUDB: Added Intel(R) Core(TM) i7-4770 CPU (Haswell) configuration to CPUDB
  ! CPUDB: Added AMD A8-5600K APU (Trinity) configuration to CPUDB
  - Replace 'SSE' and 'AVX' .bochsrc option with single 'SIMD' option which controls presence
    of all CPU SIMD extensions from SSE to AVX-512

- Bochs Debugger and Instrumentation
  - Added disam for Bochs internal instruction representation, especially useful for instrumentation
  - Updated definition of instrumentation callbacks, see description in
    instrumentation.txt / Fixed instrumentation examples
  - added capability to use the gui debugger output window as a log viewer

- General
  - Increased max. device log prefix size to 6 and added / modified prefixes
  - plugin version now uses the native DLL handling code for all Windows ports

- Configure and compile
  - configure and compilation fixes for Cygwin and Visual Studio environment
  - configure option --enable-cdrom now only controls the presence of
    platform-specific code for device access

- Config interface
  - Added global sound control option for the driver and wave input/output
  - Added new bochsrc option to control the speaker output mode
  - Added support to specify the initial time for 'clock' option in ctime(3) string format
  - Added support for the LTDL_LIBRARY_PATH variable with MSVC plugins
  - All SB16 / ES1370 are now changable at runtime
  - textconfig: added menu item for saving configuration at runtime
  - Added bochsrc option for the Voodoo Graphics emulation (experimental)

- I/O Devices
  - Hard drive / CD-ROM
    - seek latency implemented for ATA/ATAPI read commands
    - portable ISO image file access now available on all platforms
  - Networking